@@ -9,8 +9,11 @@ import com.cmp.inv.mgmt.service.repos.ProductRepository;
 import jakarta.annotation.PostConstruct;
 import lombok.RequiredArgsConstructor;
 import net.datafaker.Faker;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.springframework.stereotype.Component;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
@@ -19,6 +22,7 @@ import java.util.stream.IntStream;
 @RequiredArgsConstructor
 public class DBInitializer {
 
+    private static final Logger log = LogManager.getLogger(DBInitializer.class);
     private final CategoryRepository categoryRepository;
     private final ProductRepository productRepository;
     private final CustomerRepository customerRepository;
@@ -29,40 +33,41 @@ public class DBInitializer {
     @PostConstruct
     public void init() {
 
-        if (categoryRepository.count() > 0 ||
-                productRepository.count() > 0 ||
-                customerRepository.count() > 0 ||
-                orderRepository.count() > 0)
+        if (categoryRepository.count() > 0
+                || productRepository.count() > 0
+                || customerRepository.count() > 0
+                || orderRepository.count() > 0)
             return;
 
-        // 1️⃣ Seed Categories
-        List<Category> categories = IntStream.range(0, 5)
-                .mapToObj(i -> Category.builder()
+        // Seed Categories
+        List<Category> categories = IntStream.range(0, 5).
+                mapToObj(i -> Category.builder()
                         .name(faker.commerce().department())
                         .description(faker.lorem().sentence())
                         .build())
-                .collect(Collectors.toList());
-        categoryRepository.saveAll(categories);
+                .toList();
+        categories = categoryRepository.saveAll(categories);
+        log.info("Saved categories");
 
-        // 2️⃣ Seed Products and attach to Category using helper method
-        List<Product> products = IntStream.range(0, 20)
-                .mapToObj(i -> {
-                    Category category = categories.get(faker.random().nextInt(categories.size()));
-                    Product product = Product.builder()
-                            .sku("SKU-" + faker.number().digits(8))
-                            .name(faker.commerce().productName())
-                            .description(faker.lorem().sentence())
-                            .price(faker.number().randomDouble(2, 50, 2000))
-                            .stock(faker.number().numberBetween(10, 200))
-                            .imageUrl(faker.internet().image())
-                            .build();
-                    category.addProduct(product);
-                    return product;
-                })
-                .collect(Collectors.toList());
-        productRepository.saveAll(products);
+        // Seed Products and attach to Category using helper method
+        List<Product> products = new ArrayList<>();
+        for (int i = 0; i < 20; i++) {
+            Category category = categories.get(faker.random().nextInt(categories.size()));
+            Product product = Product.builder().
+                    sku("SKU-" + faker.number().digits(8))
+                    .name(faker.commerce().productName())
+                    .description(faker.lorem().sentence())
+                    .price(faker.number().randomDouble(2, 50, 2000))
+                    .stock(faker.number().numberBetween(10, 200))
+                    .imageUrl(faker.internet().image())
+                    .build();
+            product.setCategory(category);
+            products.add(product);
+        }
+        products = productRepository.saveAll(products);
+        log.info("Saved products");
 
-        // 3️⃣ Seed Customers
+        // Seed Customers
         List<Customer> customers = IntStream.range(0, 10)
                 .mapToObj(i -> Customer.builder()
                         .email(faker.internet().emailAddress())
@@ -73,18 +78,17 @@ public class DBInitializer {
                         .country(faker.address().country())
                         .phone(faker.phoneNumber().cellPhone())
                         .build())
-                .collect(Collectors.toList());
-        customerRepository.saveAll(customers);
+                .toList();
+        customers = customerRepository.saveAll(customers);
+        log.info("Saved customers");
 
         // 4️⃣ Create Orders + OrderDetails using helper methods
         for (int i = 0; i < 40; i++) {
             Customer customer = customers.get(faker.random().nextInt(customers.size()));
-            Order order = Order.builder()
-                    .status(OrderStatus.PLACED)
-                    .totalPrice(0.0)
-                    .build();
 
-            customer.addOrder(order);
+            // Create Order
+            Order order = Order.builder().status(OrderStatus.PLACED).totalPrice(0.0).build();
+            order.setCustomer(customer);
 
             double total = 0.0;
             int items = faker.random().nextInt(1, 4);
@@ -92,21 +96,18 @@ public class DBInitializer {
             for (int j = 0; j < items; j++) {
                 Product product = products.get(faker.random().nextInt(products.size()));
                 int qty = faker.number().numberBetween(1, 5);
-
-                OrderDetail detail = OrderDetail.builder()
-                        .quantity(qty)
-                        .build();
-
-                order.addOrderDetail(detail);   // maintain relationship
-                product.addOrderDetail(detail); // maintain other side
-
+                OrderDetail detail = OrderDetail.builder().quantity(qty).build();
+                detail.setOrder(order);
+                detail.setProduct(product);
                 total += product.getPrice() * qty;
             }
 
             order.setTotalPrice(total);
-            orderRepository.save(order); // cascades save for details
+            log.info("Before Saved order");
+            orderRepository.save(order);
+            log.info("After Saved order");
         }
 
-        System.out.println("🎯 Data seeded successfully using bidirectional helper methods");
+        log.info("Data seeded successfully using bidirectional helper methods");
     }
 }
